# kagikanri

./: CLAUDE.md  Dockerfile  README.md
backend/: .gitignore  Cargo.toml  build.rs
backend/src/: auth.rs  auth_middleware.rs  config.rs  error.rs  git.rs  lib.rs  main.rs  pass.rs  passkey.rs  simple_main.rs  state.rs
backend/src/handlers/: auth.rs  health.rs  mod.rs  otp.rs  passkeys.rs  passwords.rs  sync.rs
backend/tests/: git_integration_tests.rs  integration_tests.rs
frontend/: pnpm-lock.yaml  svelte.config.js
frontend/src/lib/components/: AddPasswordModal.svelte  AuthModal.svelte  Navigation.svelte  PasswordCard.svelte  PasswordList.svelte
frontend/src/lib/stores/: auth.ts
frontend/src/routes/: +layout.svelte  +page.svelte
k8s/: namespace.yaml  secrets.yaml
